// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditForm> renders a form with the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          account:firstname
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          account:lastname
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          account:email
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="changePasswordButtonContainer"
    >
      <button
        classes="changePasswordButton"
        type="button"
      >
        <span>
          account:change-password
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EditForm> renders a form without the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          account:firstname
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          account:lastname
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <span
          class="label"
        >
          account:email
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              class="input"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
